Fixed Padding & Margin Causing Issues on Mobile Devices

--- a/src/app.css
+++ b/src/app.css
@@ -7,30 +7,38 @@
 
 }
 
-.clip-shadow {filter: drop-shadow(0px 0px 20px rgba(10, 10, 10, 0.247))}
+.clip-shadow {filter: drop-shadow(0px 0px 0px rgba(10, 10, 10, 0.664))}
 
 .me {
-    background-image: linear-gradient(to right, #000000da, #292727d0), 
+    background-image: linear-gradient(to right, #3824ee9a, #080808cb), 
                         url('assets/img/code.png');
     background-repeat:no-repeat;
     background-position: center center;
     background-size: cover;
     margin: 4rem auto;
-    clip-path: polygon(0 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 94% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 6% 85%);
+    clip-path: polygon(0 5%, 100% 0, 100% 94%, 0% 100%);
     
 }
 
 .about-p {
     color: #FFFFFF;
-    background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(176, 173, 184));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent
-}
-
-#about-me {
-    padding: 10rem
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+    0px 8px 13px rgba(0,0,0,0.1),
+    0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .section-heading {
     border-bottom: 5px solid #f14668 ;
+    margin-bottom: 1rem;
+    padding-bottom: 5px;
+}
+
+
+#about-me {
+    padding: 10rem 1rem;
+}
+
+#email {
+    background-color: #f9ca24;
+    
 }
